<resources>
    <string name="app_name">TipCalcFinalApp</string>
    <string name="main.button.submit">Calcular</string>
    <string name="main.hint.bill">Total</string>
    <string name="main.hint.percentage">% de propina</string>
    <string name="main.button.increase">+</string>
    <string name="main.button.decrease">-</string>
    <string name="main.button.clear">Borrar recientes</string>
    <string name="main.notice.clear">Elementos recientes ha quedado vacío</string>
    <string name="main.menu.action.about">Acerca de</string>

    <string name="global.message.tip">Propina %,.1f</string>
    <string name="tipdetail.message.bill">Total %,.1f</string>
    <string name="tipcalc.menu.action.premium">Activar premium</string>
    <string name="login.error">Imposible iniciar sesión %s</string>
    <string name="login.cancel.error">Inicio de sesión cancelado</string>
    <string name="tipcalcpremium.menu.action.facebooklogout">Cerrar premium</string>
    <string name="tipcalcpremium_header_history">Historial</string>
    <string name="tipcalcpremium_header_extra">Extra</string>
    <string name="tipcalcpremium_history_lbl_bill">$</string>
    <string name="tipcalcpremium_history_lbl_percent">%</string>
    <string name="tipcalcpremium_history_lbl_latitude">Lat.</string>
    <string name="tipcalcpremium_history_lbl_longitude">Lon.</string>
    <string name="tipcalcpremium_history_lbl_total">$$</string>
    <string name="tipcalcpremium.menu.action.historyrefresh">Actualizar historia</string>
    <string name="tipcalcpremium.extra.lbl.entity">Entidad</string>
    <string name="tipcalcpremium.extra.lbl.purchase">Compra</string>
    <string name="tipcalcpremium.extra.lbl.sale">Venta</string>
    <string name="tipcalcpremium.extra.lbl.dayreference">Referencia diaria</string>
    <string name="tipcalcpremium.extra.lbl.lastupdate">Última actualización</string>
</resources>
