<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/tipcalcpremium_history_lbl_bill"/>

        <TextView
            android:id="@+id/txtBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/lblBill"
            android:layout_toRightOf="@id/lblBill"/>

        <TextView
            android:id="@+id/lblPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblBill"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/tipcalcpremium_history_lbl_percent"/>

        <TextView
            android:id="@+id/txtPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBill"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/lblPercentage"
            android:layout_toRightOf="@id/lblPercentage"/>

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPercentage"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/lblLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDate"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/tipcalcpremium_history_lbl_latitude"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblLatitude"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/lblLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLatitude"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/tipcalcpremium_history_lbl_longitude"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblLongitude"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLongitude"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/tipcalcpremium_history_lbl_total"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtBillFinalTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblLongitude"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/lblTotal"
            android:layout_toRightOf="@id/lblTotal"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTotal"
            android:orientation="horizontal">

            <com.facebook.share.widget.ShareButton
                android:id="@+id/fbShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutButtons"
                android:layout_margin="8dp"/>

            <com.facebook.share.widget.SendButton
                android:id="@+id/fbSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fbShare"
                android:layout_margin="8dp"/>

            <ImageView
                android:id="@+id/imgMyLocation"
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/gmap" />

        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</android.support.v7.widget.CardView>